Implemented View Area Button and it works